--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,10 +4,9 @@
 
 html,
 body {
+  font-family: 'Montserrat', sans-serif;
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
 a {
